--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.5.1
   go_router: ^14.2.0
+  riverpod_annotation: ^2.3.5
+  uuid: ^4.4.2
 
 dev_dependencies:
+  build_runner: ^2.4.11
+  custom_lint: ^0.6.4
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+  riverpod_generator: ^2.4.0
+  riverpod_lint: ^2.3.10
 
 flutter:
   uses-material-design: true
