--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.5.1
   go_router: ^14.2.0
+  installed_apps: ^1.5.0
   riverpod_annotation: ^2.3.5
   uuid: ^4.4.2
 
